# Django-Microservice-Admin

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
dajngo_microservice_admin/: admin.py  apps.py  urls.py
dajngo_microservice_admin/migrations/: 0002_auto_20221011_1009.py  0003_rename_redirect_url_adminapps_redirect_path.py  0004_alter_adminapps_redirect_path.py
django_microservice_admin/: admin.py  apps.py  jwt_serializer.py  models.py  urls.py  views.py
django_microservice_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_microservice_admin/migrations/: 0001_initial.py  0005_auto_20221019_1553.py  0006_auto_20221019_1705.py
django_microservice_admin/templates/admin/: base.html  base_site.html  change_form.html
