# setup.cfg
[metadata]
name = django-microservice-admin
version = 0.0.1
description = An App that connects all admins from all microservices
long_description = file:README.rst
url = https://github.com/minaaaatef/Django-Microservice-Admin
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    djangorestframework >= 3.9.1
    djangorestframework-simplejwt >= 4.4.0
